- Changed background colour - Corrected Back to top link on bigger screens - Styled Scrollbar to fit general styling
#23

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -45,8 +45,8 @@ html {
     font-family: Roboto, Poppins, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background: rgb(250,246,242);
-    background: radial-gradient(circle, rgba(250,246,242,1) 75%, rgba(119,151,140,0.86) 100%);
+    background: rgb(249,248,248);
+background: radial-gradient(circle, rgba(249,248,248,1) 75%, rgba(119,151,140,0.86) 100%);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -107,7 +107,7 @@ body {
     /* TEXT BLOCKS
     ------------------------------------------*/
 
-    p, article, aside, details {
+    p, article, aside {
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -140,7 +140,15 @@ body {
         z-index: 2;
     }
 
+    details {
+        padding: 20px;
+    }
 
+    details > summary {
+        font-family: Poppins-Regular, sans-serif;
+        font-weight: 600;
+        margin-bottom: 10px;
+    }
 
 /* MAIN SECTION
 ----------------------------------------------------------------------------------------------------------------------------------------*/
@@ -185,12 +193,12 @@ main {
 #back-to-top {
     background: rgb(231, 224, 217);
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    border-radius: 3vw;
-    padding: 5%;
+    border-radius: 2vw;
+    padding: 2%;
     letter-spacing: 0.02em;
     text-decoration: none;
     color: #4D5053;
-    font-size: 4vw;
+    font-size: 2vw;
     font-family: Roboto, sans-serif;
     font-weight: 600;
     text-align: center;
@@ -199,11 +207,32 @@ main {
     margin-right: auto;
     margin-top: 10%;
     margin-bottom: 0;
-    width: 60%
-
-
+    width: 50%
 }
 
+/* SCROLLBAR
+---------------------------------------------------------------------------------------------------------------------------------------*/
+
+/* Breite */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: rgba(244, 240, 236, 0.5);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #4D5053;
+    border-radius: 1vw;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(119,151,140,0.86);
+}
 
 
 /* Responsive Design
@@ -244,6 +273,16 @@ main {
         padding: 2%; /* 2% der Breite des Elements */
     }
 
+    #back-to-top {
+    border-radius: 1vw;
+    padding: 2%;
+    font-size: 2vw;
+    font-weight: 600;
+    margin-top: 10%;
+    margin-bottom: 0;
+    width: 50%
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -270,7 +309,15 @@ main {
         font-size: 2.5vw;
     }
 
-
+    #back-to-top {
+    border-radius: 3vw;
+    padding: 3%;
+    font-size: 3vw;
+    font-weight: 600;
+    margin-top: 10%;
+    margin-bottom: 0;
+    width: 50%
+    }
 }
 
 @media (max-width: 480px) {
@@ -297,4 +344,13 @@ main {
         font-size: 4vw;
     }
 
+    #back-to-top {
+    border-radius: 3vw;
+    padding: 5%;
+    font-size: 4vw;
+    font-weight: 600;
+    margin-top: 10%;
+    margin-bottom: 0;
+    width: 60%
+}
 }
